# api-agent

./: LICENSE  README.md  apiagent.py  instructions.md  pyproject.toml
.devcontainer/: devcontainer.json
example-prompts/: landing_page_critique.md  transcribe-youtube.md
service_landing_page_critique_api/: README.md  main.py  pyproject.toml
