[tool.poetry]
name = "youtube_transcript_api"
version = "0.1.0"
description = "An API to transcribe YouTube videos"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
modal-client = "^0.52.3"
pytube = "^11.0.1"
youtube_transcript_api = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"