[tool.poetry]
name = "landing-page-critique-api"
version = "0.1.0"
description = "API for analyzing landing page copywriting"
authors = ["AI Agent <ai@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.8.2"
modal = "^0.64.10"
openai = "1.40.3"
fastapi = "^0.112.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"